[project]
name = "disco-bruin-dlt-dbt-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.11.1",
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "dlt[bigquery,duckdb]>=1.24.0",
    "faker>=40.11.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
]
